Added gif for multiplayer demo

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 						<div class="content">
 							<div class="inner">
 								<h1>fivekoi gamedev portfolio</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>I'm a game developer with experience in Unity and C++. I love building small prototypes, <br />and have participated in over 25 game jams so far.
+								You can find all of them on <a href="https://fivekoi.itch.io/" target="_blank">my itch.io page</a>.</p>
+
+								<p>I also have some larger projects, which you can explore by clicking the buttons below.</p>
 							</div>
 						</div>
 						<nav>
@@ -46,7 +48,7 @@
 
 						<!-- Salty Game Engine -->
 							<article id="salty">
-								<h2 class="major">Salty Game Engine</h2>
+								<h2 class="major"><a href="https://github.com/fivekoi/SaltyGameEngine" target="_blank">Salty Game Engine</a></h2>
 								
 								<!-- Slideshow container -->
 								<div class="slideshow-container">
@@ -71,7 +73,7 @@
 
 								<p>A lightweight 2D C++ game engine, developed for the creation of browser games.</p>
 								<p>I developed this engine to better understand of architecture of the engines I use (mainly Unity). It was my main project for about a year, and I still occasionally update it.
-									I also used it to make <a href="https://fivekoi.itch.io/feedback-loop">a game for the GMTK game jam</a> this past summer.
+									I also used it to make <a href="https://fivekoi.itch.io/feedback-loop" target="_blank">a game for the GMTK game jam</a> this past summer.
 								</p>
 								<p>I followed an ECS tutorials to get the core structure right, and then built my own systems on top of it. 
 									The two features I am most proud of are the undo history system, and a native C++ scripting system that behaves similarly to Unity scripts
@@ -122,7 +124,7 @@ void PlayerMovement::Update(float dt){
 
 						<!-- Twenty-Four Game -->
 							<article id="24">
-								<h2 class="major">Twenty-Four Puzzle</h2>
+								<h2 class="major"><a href="https://fivekoi.itch.io/twenty-four" target="_blank">Twenty-Four Puzzle</a></h2>
 								
 								<!-- Slideshow container -->
 								<div class="slideshow-container">
@@ -169,15 +171,15 @@ void PlayerMovement::Update(float dt){
 
 								<!-- Full-width images with number and caption text -->
 								<div class="mySlides3 fade">
-									<div class="numbertext">1 / 3</div>
-									<span class="image main"><img src="images/valley/valley1.png" alt="" /></span>
-									<div class="text">Caption Text</div>
+									<div class="numbertext">1 / 2</div>
+									<span class="image main"><img src="images/valley/blueberry.gif" alt="" /></span>
+									<div class="text">Networked item pickup and throw</div>
 								</div>
 
 								<div class="mySlides3 fade">
-									<div class="numbertext">2 / 3</div>
+									<div class="numbertext">2 / 2</div>
 									<span class="image main"><img src="images/valley/valley2.png" alt="" /></span>
-									<div class="text">Caption Two</div>
+									<div class="text">Greyboxing for lower valley area</div>
 								</div>
 
 								<!-- Next and previous buttons -->
@@ -473,7 +475,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<a href="https://github.com/fivekoi" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a>
 					</footer>
 
 			</div>
