Added grid background

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<img src="images/itchpic.png" alt="" />
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -255,7 +255,7 @@ private void PickupObserver()
 								<a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
 								<a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 								</div>
-								<p>For my Bachelor's research project I developed an application in Unity which utilized a Leap Motion sensor to assist in hand rehabilitation. 
+								<p>For my Bachelor's research project I developed an application in Unity. 
 								</p>
 								<p>This project explores using a Leap Motion sensor to assist in hand rehabilitation. By capturing the user's hand motion in real time, we build a 3D hand model that mirrors and exaggerates the user's gestures. The application uses forward kinematics and quaternion-based rotations to calculate joint positions and orientations, allowing for both accurate tracking and controlled exaggeration of motion for clinical purposes. 
 								</p>
