Added a bit about playtesting to 24

--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@ void PlayerMovement::Update(float dt){
 								I mainly used them to juice up card interactions (such as burning one with a match, or adding a glimmer when performing basic arithmetic). 
 								This made the puzzle actions feel more engaging, rather than just having the user look at numbers and symbols on a screen.
 								</p>
-								
+								<p>I also learned some valuable lessons about playtesting and puzzle design.
+								Small quality-of-life additions (like having a level counter, to display how far from the next item players were) proved to be necessary to motivate players to keep going.
+								The overall difficulty curve still ended up being far too difficult, and in hindsight I should have allocated more time to adjusting that rather than continuing to add mechanics.
+								</p>
 							</article>
 
 						<!-- Multiplayer Prototype -->
